# nautilus-sockets

./: Cargo.toml  README.md
examples/chat/: chat_client.rs  chat_server.rs
examples/godot/: godot_server.rs
src/: acknowledgement.rs  client.rs  lib.rs  packet.rs  server.rs  socket.rs
src/acknowledgement/: manager.rs  mod.rs  packet.rs
src/client/: mod.rs
src/connection/: mod.rs
src/events/: mod.rs
src/persistent/: mod.rs  storage.rs
src/plugins/: logging.rs  mod.rs
src/sequence/: mod.rs
src/server/: config.rs  mod.rs
src/socket/: events.rs  mod.rs
