[package]
name = "nautilus-sockets"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["networking", "udp", "sockets", "network"]
categories = ["network-programming"]
description = "A UDP Socket that listens for events"
repository = "https://github.com/philip727/nautilus-sockets"


[dependencies]
anyhow = "1.0.93"
byteorder = "1.5.0"

[[example]]
name = "chat_client"
path = "examples/chat/chat_client.rs"

[[example]]
name = "chat_server"
path = "examples/chat/chat_server.rs"

[[example]]
name = "godot_server"
path = "examples/godot/godot_server.rs"
